--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <title>UPN Model</title>
 </head>
 <body>
+    <div id="blocker">
+        <div id="instructions">
+            <span style="font-size:40px">Haz Click Aqui para Continuar</span>
+            <br />
+            (W,A,S,D = Moverse, SPACE = Saltar, Click= Interactuar, Esc = Mostrar Cursor)
+        </div>
+    </div>
     <div id="canvas"></div>
 </body>
 </html>
