--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,22 @@
         </div>
     </div>
     <div id="canvas"></div>
-
+    <!--    Loading Modal -->
+    <div class="modal fade" id="modalSpinner" data-backdrop="static" data-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div id='modal-loading-content' class="modal-content">
+                <div class="modal-body">
+                    <div class="spinner">
+                    </div>
+                </div>
+                <div id='modal-loading-footer' class="modal-footer">
+                    <h1>Loading model......</h1>
+                    <p>This may take a few minutes.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Modals -->
     <div class="modal fade" id="modalCaja" data-backdrop="static" data-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
